--- a/website/style.css
+++ b/website/style.css
@@ -49,7 +49,7 @@ p {
 } */
 
 button#generate {
-  background: #070ede;
+  background: #6b03f3;
   padding: 0.5rem;
   border-radius: 0.5rem;
   color: #fff;
@@ -61,7 +61,7 @@ button#generate {
 }
 
 button#generate:hover {
-  background: #010a25;
+  background: #43027f;
 }
 
 .weather-info {
